# RS-STM32-F103-QS

./: Cargo.toml  cmsis-dap.cfg  defmt_print.bat  main  stm32f1x.cfg
.cargo/: config.toml
