[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"
cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
stm32f1xx-hal = {version = "0.10.0",features = ["rt", "stm32f103", "medium"]}
panic-halt = "0.2.0"
defmt = "0.3.5"
defmt-rtt = "0.4.0"

[profile.release]
debug = true
lto = true
opt-level = "s"
